Fix modal overflow

--- a/src/styles/components/_general.scss
+++ b/src/styles/components/_general.scss
@@ -8,7 +8,7 @@
 html {
 	font-family: $FONT_FAMILY;
 	font-size: 1rem;
-	height: 100%;
+	// height: 100%;
 }
 
 body {
@@ -19,6 +19,7 @@ body {
 	-webkit-font-smoothing: $FONT_SMOOTHING_WEBKIT;
 	text-rendering: $FONT_SMOOTHING_RENDERING;
 	overflow-x: hidden;
+	// overflow: hidden;
 }
 
 .App {
@@ -28,7 +29,7 @@ body {
 	margin-bottom: 24px;
 }
 
-.header {
+.App .header {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -89,36 +90,55 @@ body {
 }
 
 .modal-wrapper {
+	box-sizing: content-box;
 	position: fixed;
 	display: none;
-	align-items: center;
-	justify-content: center;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	height: 100vh;
 	padding: 32px;
-	width: 100%;
-	height: 100%;
-	overflow-y: visible;
+	overflow-y: auto;
+	overflow-x: hidden;
+	// overflow: hidden;
 	z-index: 999;
 
 	&::before {
-		position: absolute;
+		content: '';
+		display: block;
+		position: fixed;
 		top: 0;
+		right: 0;
+		bottom: 0;
 		left: 0;
 		width: 100%;
 		height: 100%;
 		pointer-events: none;
-		z-index: 1;
+		z-index: 0;
 	}
 
 	form {
-		position: relative;
+		// position: relative;
 		display: block;
 		padding: 24px;
-		padding-top: 40px;
+		padding-top: 12px;
+		margin: 48px auto;
+		width: 100%;
 		max-width: 640px;
 		background-color: var(--color-bg-primary);
 		border-radius: $BORDER_RADIUS;
+	}
+
+	.form__header {
+		position: relative;
+		display: flex;
+		justify-content: flex-end;
 		width: 100%;
-		z-index: 999;
+		.cancel {
+			margin-right: -12px;
+			border: none;
+		}
 	}
 
 	label {
@@ -177,26 +197,18 @@ body {
 		}
 	}
 
-	.cancel {
-		position: absolute;
-		top: 8px;
-		right: 8px;
-		z-index: 1;
-	}
-
 	.modal-close {
-		position: absolute;
+		position: fixed;
 		top: 0;
 		right: 0;
 		bottom: 0;
 		left: 0;
-		width: 100%;
-		height: 100%;
 		background-color: rgba(0, 0, 0, 0.4);
-		z-index: 2;
+		overflow: hidden;
+		z-index: -1;
 	}
 }
 
 .modal-wrapper.show {
-	display: flex;
+	display: block;
 }
